docroot/themes/humsci/humsci_basic/src/scss/partials/components/_vertical-button-card.scss
@use '../functions/general' as *;
@use '../functions/color' as *;
@use '../mixins/theme' as *;
@use '../mixins/buttons' as *;

.hb-vertical-button-card {
  position: relative;

  .hb-card__graphics {
    img {
      width: 100%;
    }
  }

  .hb-card__title:only-child {
    margin-bottom: 0;
  }

  .field-hs-postcard-body {
    margin-bottom: 0;
  }

  a.hs-button,
  .hs-button {
    width: 100%;
    font-size: hb-calculate-rems(18px);
    hyphens: auto;
    word-break: normal;
    overflow-wrap: anywhere;

    &:hover,
    &:focus,
    &.is-focused {
      background-color: color('primary-dark');
      border-color: color('primary-dark');
    }
  }

  @include hb-traditional {
    border: 2px solid color('secondary');
    background-color: color('white', 'global');

    .hb-card__content-wrapper {
      display: flex;
      flex-direction: column;
      flex-grow: 1;
    }

    .hb-card__title {
      margin-bottom: hb-calculate-rems(16px);
    }

    .hb-card__graphics {
      padding: hb-calculate-rems(24px) hb-spacing-width('sm') 0;

      &,
      .hb-raised-cards & {
        margin-bottom: hb-calculate-rems(32px);
      }
    }

    .hb-card__content {
      padding: hb-calculate-rems(32px) hb-spacing-width('sm');
      flex-grow: 1;

      &:has(.hs-button) {
        padding-bottom: 0;

        .hb-card__description {
          margin-bottom: hb-calculate-rems(16px);
        }
      }
    }

    .hs-button,
   a.hs-button {
      @include hb-secondary-button;

      position: relative;
      border-width: 0;
      border-top-width: 2px;
      margin-top: auto;
      margin-left: hb-calculate-rems(-24px);
      margin-right: hb-calculate-rems(-24px);
    }

    &:has(.hb-card__graphics) {
      .hb-card__content {
        padding-top: 0;
      }
    }
  }

  @include hb-colorful {
    .hb-card__graphics {
      &,
      .hb-raised-cards & {
        padding: 0 hb-calculate-rems(36px);
        margin-bottom: hb-calculate-rems(-40px);
      }
    }

    .hb-card__title {
      color: color('secondary');
    }

    .hb-card__content {
      padding: hb-calculate-rems(32px) hb-calculate-rems(36px);
      border: 2px solid color('tertiary-highlight');
      box-shadow: hb-calculate-rems(1px) hb-calculate-rems(7.5px)
        hb-calculate-rems(35px)
        color-mix(in srgb, color('black', 'global') 10%, transparent);
      background-color: color('white', 'global');

      .hb-raised-cards--uniform-height & {
        height: 100%;
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
      }

      .hb-raised-cards & {
        padding: hb-calculate-rems(32px) hb-calculate-rems(36px);
      }

      // Update padding when card is in 4 columns.
      .field-hs-collection-items.item-per-row--4 & {
        padding: hb-calculate-rems(18px);
      }
    }

    &:has(.hb-card__graphics) {
      .hb-card__content {
        padding-top: hb-calculate-rems(62px);

        .hb-raised-cards &,
        .field-hs-collection-items.item-per-row--4 & {
          padding-top: hb-calculate-rems(62px);
        }
      }
    }

    .hb-card__content-wrapper {
      .hb-raised-cards--uniform-height & {
        flex-grow: 1;
        display: flex;
        flex-direction: column;
      }
    }

    &:has(.hb-card__description) {
      .hb-card__title {
        &,
        .hb-raised-cards & {
          margin-bottom: hb-calculate-rems(16px);
        }
      }
    }

    &:has(.hs-button) {
      .hb-card__title {
        &,
        .hb-raised-cards,
        &:only-child {
          margin-bottom: hb-calculate-rems(24px);
        }
      }

      .hb-card__description {
        margin-bottom: hb-calculate-rems(24px);
      }
    }

    .hs-button {
      padding: hb-calculate-rems(4px) hb-calculate-rems(24px)
        hb-calculate-rems(6px);
      background-color: color('primary');
      border-color: color('primary');
    }
  }
}

